--- a/moveMates/package.json
+++ b/moveMates/package.json
@@ -47,5 +47,9 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
-  "private": true
+  
+  "private": true,
+   "type": "module"
+
 }
+
